[project]
name = "survtrace"
# version = "1.0"
# description = "Surv{TRACE}: Transformers for Survival Analysis with Competing Events"
authors = [
    {name = "Zifeng Wang", email = "zifengw2@illinois.edu"},
]
maintainers = [
    {name = "Ivan Rossi", email = "ivan.rossi@unito.it"}
]
dependencies = [
    "easydict==1.9",
    "brotlipy",
    "scikit-survival==0.21.0",
    "pandas",
    "torchtuples==0.2.2",
    "numpy",
    "torch==1.12.1",
    "matplotlib",
    "pycox==0.2.3",
    "scikit-learn==1.2.1",
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Topic :: Software Development",
    "Topic :: Scientific/Engineering"
]
dynamic = ["description", "version"]

[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"


